testsuite/negative/operator().n
class Test
{
  @()(_x : int) : int // E: User defined operator 'Test\.\(\)' must be declared static and public
  {
    0
  }
  
  public static @()(_x : string) : int // E: User defined operator 'Test\.\(\)' must be declared as extension method
  {
    0
  }
}
